--- a/SecureAccessMng-Web/src/main/resources/application-local.properties
+++ b/SecureAccessMng-Web/src/main/resources/application-local.properties
@@ -10,3 +10,6 @@ datasource.master.max-idle=5
 datasource.master.max-wait=50000
 multipart.maxFileSiz=1MB
 multipart.maxRequestSize=1MB
+
+server.ssl.key-store = classpath:2019_STAR.ring2pay.com.jks
+server.ssl.key-store-password = ibnpay00
