SecureAccessMng-Web_hsjeon 20200519_001

--- a/SecureAccessMng-Web/pom.xml
+++ b/SecureAccessMng-Web/pom.xml
@@ -12,8 +12,8 @@
 
 	<groupId>com.inbiznetcorp.SecureAccess.SecureAccessMng.Web</groupId>
 	<artifactId>SecureAccessMng-Web</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>SecureAccessMng-Web</name>
+	<version>20200519_001</version>
+	<name>SecureAccessMng-Web_hsjeon</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
