--- a/SecureAccessMng-Web/pom.xml
+++ b/SecureAccessMng-Web/pom.xml
@@ -12,8 +12,9 @@
 
 	<groupId>com.inbiznetcorp.SecureAccess.SecureAccessMng.Web</groupId>
 	<artifactId>SecureAccessMng-Web</artifactId>
-	<version>20200521_001</version>
-	<name>SecureAccessMng-Web_hsjeon</name>
+	<version>20200522_004</version>
+	<packaging>war</packaging>
+	<name>SecureAccessMng-Web</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
