--- a/SecureAccessMng-Web/src/main/resources/application-test.properties
+++ b/SecureAccessMng-Web/src/main/resources/application-test.properties
@@ -1,9 +1,9 @@
 server.port=${:39030}
 
 datasource.master.driver-class-name=com.mysql.jdbc.Driver
-datasource.master.url=jdbc:mysql://dev01.ring2pay.com:4418/SECURITYACCESSMNG2?autoReconnect=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8
-datasource.master.user-name=${db.user:inbiznet}
-datasource.master.password=${db.user:inbiz9020}
+datasource.master.url=jdbc:mysql://222.110.144.33:3306/SECURITYACCESSMNG2?autoReconnect=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8
+datasource.master.user-name=${db.user:accessmng}
+datasource.master.password=${db.user:accessmng}
 datasource.master.initial-size=5
 datasource.master.max-active=5
 datasource.master.max-idle=5
