--- a/SecureAccessMng-Web/pom.xml
+++ b/SecureAccessMng-Web/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>com.inbiznetcorp.SecureAccess.SecureAccessMng.Web</groupId>
 	<artifactId>SecureAccessMng-Web</artifactId>
-	<version>20200727_001</version>
+	<version>20200804_001</version>
 	<packaging>war</packaging>
 	<name>SecureAccessMng-Web</name>
 	<description>Demo project for Spring Boot</description>
@@ -122,10 +122,16 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>com.jcraft</groupId> -->
+<!-- 		    <artifactId>jsch</artifactId> -->
+<!-- 		    <version>0.1.54</version> -->
+<!-- 		</dependency> -->
+		
 		<dependency>
-		    <groupId>com.jcraft</groupId>
-		    <artifactId>jsch</artifactId>
-		    <version>0.1.54</version>
+		   <groupId>org.apache.httpcomponents</groupId>
+		   <artifactId>httpclient</artifactId>
+		   <version>4.3.1</version>
 		</dependency>
 
 	</dependencies>
