--- a/SecureAccessMng-Web/src/main/resources/application.properties
+++ b/SecureAccessMng-Web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.profiles.active=${:test}
-spring.profiles.active=${:local}
+spring.profiles.active=${:test}
+#spring.profiles.active=${:local}
 
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
