--- a/SecureAccessMng-Web/src/main/resources/application-local.properties
+++ b/SecureAccessMng-Web/src/main/resources/application-local.properties
@@ -1,7 +1,7 @@
 server.port=${:8080}
 
 datasource.master.driver-class-name=com.mysql.jdbc.Driver
-datasource.master.url=jdbc:mysql://dev01.ring2pay.com:4418/SECURITYACCESSMNG2?autoReconnect=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8
+datasource.master.url=jdbc:mysql://222.110.144.33:3306/SECURITYACCESSMNG2?autoReconnect=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8
 datasource.master.user-name=${db.user:inbiznet}
 datasource.master.password=${db.user:inbiz9020}
 datasource.master.initial-size=5
