--- a/SecureAccessMng-Web/src/main/resources/application-prd.properties
+++ b/SecureAccessMng-Web/src/main/resources/application-prd.properties
@@ -1,8 +1,8 @@
-server.port=${:29030}
+server.port=${:39030}
 
 datasource.master.driver-class-name=com.mysql.jdbc.Driver
-datasource.master.url=jdbc:mysql://211.61.220.21:3306/ASTERISK_RECORDING?autoReconnect=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8
-datasource.master.user-name=${db.user:albert}
+datasource.master.url=jdbc:mysql://127.0.0.1:3306/SECURITYACCESSMNG2?autoReconnect=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8
+datasource.master.user-name=${db.user:root}
 datasource.master.password=${db.user:Inbiz90201!@}
 datasource.master.initial-size=5
 datasource.master.max-active=5
