--- a/SecureAccessMng-Web/pom.xml
+++ b/SecureAccessMng-Web/pom.xml
@@ -12,7 +12,8 @@
 
 	<groupId>com.inbiznetcorp.SecureAccess.SecureAccessMng.Web</groupId>
 	<artifactId>SecureAccessMng-Web</artifactId>
-	<version>20211118_002</version>
+<!-- 	<version>20211118_002</version> -->
+	<version>20220328_001</version>
 	<packaging>war</packaging>
 	<name>SecureAccessMng-Web</name>
 	<description>Demo project for Spring Boot</description>
