--- a/SecureAccessMng-Web/src/main/resources/application.properties
+++ b/SecureAccessMng-Web/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.profiles.active=${:local}
 
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
+server.jsp-servlet.init-parameters.development=true
