--- a/SecureAccessMng-Web/src/main/resources/application-test.properties
+++ b/SecureAccessMng-Web/src/main/resources/application-test.properties
@@ -13,10 +13,10 @@ server.port=${:39030}
 #multipart.maxRequestSize=1MB
 
 datasource.master.driver-class-name=com.mysql.jdbc.Driver
-datasource.master.url=jdbc:mysql://222.110.144.56:3306/SECURITYACCESSMNG2?autoReconnect=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8
-#datasource.master.url=jdbc:mysql://localhost:3306/SECURITYACCESSMNG2?autoReconnect=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8
-datasource.master.user-name=${db.user:accessmng}
-datasource.master.password=${db.user:accessmng}
+#datasource.master.url=jdbc:mysql://222.110.144.56:3306/SECURITYACCESSMNG2?autoReconnect=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8
+datasource.master.url=jdbc:mysql://localhost:3306/SECURITYACCESSMNG3?autoReconnect=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8
+datasource.master.user-name=${db.user:inbiznet}
+datasource.master.password=${db.user:inbiz9020}
 datasource.master.initial-size=5
 datasource.master.max-active=5
 datasource.master.max-idle=5
